Dave is testing out a new garbage collector. I've ensured it is in use everywhere so we can do a proper test.