@@ -1,4 +1,4 @@
 #!/bin/bash
 
-env JAVACMD=java JAVA_OPTS="-server -Xss128k -Xms6000m -Xmx6000m -Dsun.awt.disablegrab=true" scala starling.launcher.DevLauncher
+env JAVACMD=java JAVA_OPTS="-server -Xss128k -Xms6000m -Xmx6000m -XX:-UseConcMarkSweepGC -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Dsun.awt.disablegrab=true" scala starling.launcher.DevLauncher
 
