@@ -52,6 +52,10 @@ else
                -server \
                -Xms6000m \
                -Xmx6000m \
+               -XX:-UseConcMarkSweepGC \
+               -verbose:gc \
+               -XX:+PrintGCTimeStamps \
+               -XX:+PrintGCDetails \
                -XX:MaxPermSize=512m \
                -XX:+HeapDumpOnOutOfMemoryError \
                -Dcom.sun.management.jmxremote.port=$JMX_PORT \
